# Vulkan-GPUImage

./: .gitignore  README.md  boot.yml  cdep  cdep.sha256  settings.gradle
.cdep/modules/: cdep-dependencies-config.cmake
app/: CMakeLists.txt  README.md  build.gradle
app/src/androidTest/java/com/glumes/vulkancamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/include/: Log.h  VKShaders.h  VideoRenderer.h  VideoRendererContext.h  VideoRendererJNI.h
app/src/main/cpp/include/engine/: VKBufferInfo.h  VKBufferManager.h  VKDefine.h  VKDeviceInfo.h  VKDeviceManager.h  VKEngineRenderer.h  VKOffScreen.h  VKOffScreenInfo.h  VKRender.h  VKRenderInfo.h  VKSwapChainInfo.h  VKSwapChainManager.h  VKTextureInfo.h  VKTextureManager.h
app/src/main/cpp/include/filter/: ColorInvertFilter.h  ContrastFilter.h  EffectFilter.h  ExposureFilter.h  FilterDefine.h  FilterType.h  FilterUtil.h  GammFilter.h  HazeFilter.h  MirrorFilter.h  OffScreenFilter.h  RGBFilter.h  VulkanFilter.h  VulkanInitializers.h
app/src/main/cpp/src/: VideoRenderer.cpp  VideoRendererContext.cpp  VideoRendererJNI.cpp
app/src/main/cpp/src/engine/: VKBufferInfo.cpp  VKBufferManager.cpp  VKDeviceInfo.cpp  VKDeviceManager.cpp  VKEngineRenderer.cpp  VKOffScreen.cpp  VKOffScreenInfo.cpp  VKRender.cpp  VKRenderInfo.cpp  VKSwapChainInfo.cpp  VKSwapChainManager.cpp  VKTextureInfo.cpp  VKTextureManager.cpp
app/src/main/cpp/src/filter/: ColorInvertFilter.cpp  ContrastFilter.cpp  EffectFilter.cpp  ExposureFilter.cpp  FilterUtil.cpp  GammFilter.cpp  HazeFilter.cpp  MirrorFilter.cpp  OffScreenFilter.cpp  RGBFilter.cpp  VulkanFilter.cpp
app/src/main/java/com/glumes/vulkancamera/activity/: BaseActivity.java  VKActivity.java
app/src/main/java/com/glumes/vulkancamera/adapter/: ItemAdapter.java
app/src/main/java/com/glumes/vulkancamera/capture/: PreviewFrameHandler.java  VideoCameraPreview.java  VideoCapture.java
app/src/main/java/com/glumes/vulkancamera/filter/: FilterType.java  FilterUtil.java
app/src/main/java/com/glumes/vulkancamera/render/: VKVideoRenderer.java  VideoRenderer.java
app/src/main/java/com/glumes/vulkancamera/view/: FilterTypeItemRow.java  ItemRow.java  SizeItemRow.java
app/src/main/java/com/glumes/vulkancamera/widget/: BaseDialog.java  FilterTypeDialog.java  ResolutionDialog.java
app/src/main/res/layout/: activity_main.xml  activity_vk.xml  dialog.xml  filter_type_list_item.xml  size_list_item.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/glumes/vulkancamera/: ExampleUnitTest.kt
